# code_wars_rusty

./: LICENSE  README.md
katas/: Cargo.toml
katas/src/: main.rs
katas/src/kyu5/: bird_mountain.rs  directions_reduction.rs  largest_difference_in_increasing_indexes.rs  mod.rs
katas/src/kyu6/: mod.rs  stop_gninnips_my_sdrow.rs
katas/src/kyu7/: mod.rs  vowel_count.rs
katas/src/kyu8/: calculate_avg.rs  mod.rs
